--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
+
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        >
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/listaPeliculas"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="vertical" />
+
+        <android.support.design.widget.NavigationView
+            app:theme="@style/NavViewTheme"
+            android:id="@+id/nav"
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_gravity="start"
+            app:menu="@menu/menu_nav"
+            app:itemTextColor="@color/nav_item_text"
+            app:itemIconTint="@color/nav_item_icon"
+            android:background="@color/nav_bg"
+            />
+
+    </android.support.v4.widget.DrawerLayout>
+
+</LinearLayout>
