--- a/app/src/main/res/layout/item_lista.xml
+++ b/app/src/main/res/layout/item_lista.xml
@@ -11,8 +11,6 @@
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
         android:background="?android:selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true"
         android:textSize="24sp" />
 
     <ImageView
@@ -28,17 +26,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/imagenPelicula"
         android:layout_centerInParent="true"
-        android:background="?android:selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true" />
+        android:background="?android:selectableItemBackground"/>
     <TextView
         android:id="@+id/recomendacion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tagsPelicula"
         android:layout_centerInParent="true"
-        android:background="?android:selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true" />
+        android:background="?android:selectableItemBackground"/>
 
 </RelativeLayout>
