--- a/app/src/main/res/layout/pelicula_busqueda.xml
+++ b/app/src/main/res/layout/pelicula_busqueda.xml
@@ -11,8 +11,6 @@
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
         android:background="?android:selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true"
         android:textSize="24sp" />
 
     <ImageView
@@ -28,9 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/pb_imagen"
         android:layout_centerInParent="true"
-        android:background="?android:selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true" />
+        android:background="?android:selectableItemBackground" />
 
 
 </RelativeLayout>
