--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,10 +24,30 @@
             android:layout_height="match_parent"
             >
 
-        <ListView
-            android:id="@+id/listaPeliculas"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></ListView>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:id="@+id/EditUsrMain"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp" />
+                <Button
+                    android:id="@+id/btnUsrMain"
+                    android:layout_toRightOf="@+id/EditUsrMain"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp"
+                    android:text="Buscar"/>
+
+                <ListView
+                    android:layout_below="@+id/btnUsrMain"
+                    android:id="@+id/listaPeliculas"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"></ListView>
+
+            </RelativeLayout>
+
+
         </android.support.v4.widget.SwipeRefreshLayout>
         </FrameLayout>
       <android.support.design.widget.NavigationView
