--- a/app/src/main/res/layout/activity_peliculas_gustadas.xml
+++ b/app/src/main/res/layout/activity_peliculas_gustadas.xml
@@ -23,11 +23,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 >
-
-                <ListView
-                    android:id="@+id/listaPeliculasGustadas"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"></ListView>
+                    android:layout_height="match_parent">
+
+                    <EditText
+                        android:id="@+id/EditPeliculasGustadas"
+                        android:layout_width="150dp"
+                        android:layout_height="50dp" />
+                    <Button
+                        android:id="@+id/btnPeliculasGustadas"
+                        android:layout_toRightOf="@+id/EditPeliculasGustadas"
+                        android:layout_width="150dp"
+                        android:layout_height="50dp"
+                        android:text="Buscar"/>
+
+                    <ListView
+                        android:layout_below="@+id/btnPeliculasGustadas"
+                        android:id="@+id/listaPeliculasGustadas"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"></ListView>
+
+                </RelativeLayout>
+
+
             </android.support.v4.widget.SwipeRefreshLayout>
         </FrameLayout>
         <android.support.design.widget.NavigationView
