--- a/app/src/main/res/layout/item_peliculas_gustadas.xml
+++ b/app/src/main/res/layout/item_peliculas_gustadas.xml
@@ -8,6 +8,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp" />
     <TextView
+        android:id="@+id/nombrepeliculagustada"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:text="NombrePeliculaGustada"
