--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
                 <EditText
                     android:id="@+id/EditUsrMain"
                     android:layout_width="150dp"
-                    android:layout_height="50dp" />
+                    android:layout_height="50dp"
+                    android:inputType="number"/>
                 <Button
                     android:id="@+id/btnUsrMain"
                     android:layout_toRightOf="@+id/EditUsrMain"
