--- a/app/src/main/res/layout/activity_peliculas_gustadas.xml
+++ b/app/src/main/res/layout/activity_peliculas_gustadas.xml
@@ -30,7 +30,8 @@
                     <EditText
                         android:id="@+id/EditPeliculasGustadas"
                         android:layout_width="150dp"
-                        android:layout_height="50dp" />
+                        android:layout_height="50dp"
+                        android:inputType="number"/>
                     <Button
                         android:id="@+id/btnPeliculasGustadas"
                         android:layout_toRightOf="@+id/EditPeliculasGustadas"
