--- a/app/src/main/res/layout/activity_usuarios_similares.xml
+++ b/app/src/main/res/layout/activity_usuarios_similares.xml
@@ -29,7 +29,8 @@
                     <EditText
                         android:id="@+id/EditUsrSimilar"
                         android:layout_width="150dp"
-                        android:layout_height="50dp" />
+                        android:layout_height="50dp"
+                        android:inputType="number"/>
                     <Button
                         android:id="@+id/btnUsrSimilar"
                         android:layout_toRightOf="@+id/EditUsrSimilar"
