--- a/app/src/main/res/layout/item_usuarios_similares.xml
+++ b/app/src/main/res/layout/item_usuarios_similares.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="20dp">
 
     <ImageView
         android:id="@+id/imgpeliculagustada"
@@ -14,17 +15,21 @@
         android:layout_width="match_parent"
         android:layout_height="100dp">
     <TextView
-        android:id="@+id/idusuariosimilar"
+        android:id="@+id/nombreusuariosimilar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#2196F3"
+        android:background="#9E9E9E"
+        android:textColor="#ffffff"
+        android:textSize="40sp"
         android:text="ID usuario"
         android:gravity="left|center"/>
     <TextView
         android:id="@+id/coeficienteusuariosimilar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#2196F3"
+        android:background="#CFD8DC"
+        android:textColor="#000000"
+        android:textSize="20sp"
         android:text="Coeficiente"
         android:gravity="left|center"/>
     </LinearLayout>
