--- a/app/src/main/res/layout/activity_buscar_pelicula.xml
+++ b/app/src/main/res/layout/activity_buscar_pelicula.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#B6B6B6"
     tools:context="com.example.francisco.recomendador.BuscarPeliculaActivity">
 
 
@@ -14,6 +15,7 @@
         android:layout_margin="15dp"
         android:layout_width="200dp"
         android:layout_height="50dp"
+        android:hint="Nombre de la pelicula"
         />
 
     <Button
@@ -22,7 +24,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:text="Buscar"
-        android:background="#00ff00"
+        android:background="#0288D1"
         android:layout_toRightOf="@id/buscarpelicula"
         />
     <ListView
@@ -33,22 +35,22 @@
         android:layout_below="@id/btnbuscarpelicula"/>
 
 
-    <!--<android.support.v4.widget.DrawerLayout
+    <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.design.widget.NavigationView
             app:theme="@style/NavViewTheme"
-            android:id="@+id/nav"
+            android:id="@+id/nav_bucarpelicula"
             android:layout_height="match_parent"
             android:layout_width="wrap_content"
             android:layout_gravity="start"
-
+            app:menu="@menu/menu_nav_peliculas"
             app:itemTextColor="@color/nav_item_text"
             app:itemIconTint="@color/nav_item_icon"
             android:background="@color/nav_bg"
             />
-    </android.support.v4.widget.DrawerLayout>-->
+    </android.support.v4.widget.DrawerLayout>
 
 </RelativeLayout>
