--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:orientation="vertical"
+
     tools:context=".MainActivity">
 
     <android.support.v4.widget.DrawerLayout
@@ -30,15 +31,18 @@
 
                 <EditText
                     android:id="@+id/EditUsrMain"
-                    android:layout_width="150dp"
+                    android:layout_width="200dp"
                     android:layout_height="50dp"
-                    android:inputType="number"/>
+                    android:inputType="number"
+                    android:hint="Id Usuario"/>
                 <Button
                     android:id="@+id/btnUsrMain"
                     android:layout_toRightOf="@+id/EditUsrMain"
                     android:layout_width="150dp"
                     android:layout_height="50dp"
-                    android:text="Buscar"/>
+                    android:background="#0288D1"
+                    android:text="Buscar"
+                    android:textColor="#ffffff"/>
 
                 <ListView
                     android:layout_below="@+id/btnUsrMain"
