--- a/app/src/main/res/layout/activity_peliculas_gustadas.xml
+++ b/app/src/main/res/layout/activity_peliculas_gustadas.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
+    android:background="#B6B6B6"
     android:orientation="vertical"
     tools:context="com.example.francisco.recomendador.PeliculasGustadasActivity">
 
@@ -52,11 +53,11 @@
         </FrameLayout>
         <android.support.design.widget.NavigationView
             app:theme="@style/NavViewTheme"
-            android:id="@+id/navGustadas"
+            android:id="@+id/nav_gustadas"
             android:layout_height="match_parent"
             android:layout_width="wrap_content"
             android:layout_gravity="start"
-            app:menu="@menu/menu_nav"
+            app:menu="@menu/menu_nav_perfil"
             app:itemTextColor="@color/nav_item_text"
             app:itemIconTint="@color/nav_item_icon"
             android:background="@color/nav_bg"
