--- a/app/src/main/res/layout/activity_usuarios_similares.xml
+++ b/app/src/main/res/layout/activity_usuarios_similares.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
+    android:background="#B6B6B6"
     android:orientation="vertical"
     tools:context=".UsuariosSimilaresActivity">
 
@@ -28,13 +29,15 @@
 
                     <EditText
                         android:id="@+id/EditUsrSimilar"
-                        android:layout_width="150dp"
+                        android:layout_width="200dp"
                         android:layout_height="50dp"
+                        android:hint="Id Usuario"
                         android:inputType="number"/>
                     <Button
                         android:id="@+id/btnUsrSimilar"
                         android:layout_toRightOf="@+id/EditUsrSimilar"
                         android:layout_width="150dp"
+                        android:background="#0288D1"
                         android:layout_height="50dp"
                         android:text="Buscar"/>
 
@@ -54,7 +57,7 @@
             android:layout_height="match_parent"
             android:layout_width="wrap_content"
             android:layout_gravity="start"
-            app:menu="@menu/menu_nav"
+            app:menu="@menu/menu_nav_similares"
             app:itemTextColor="@color/nav_item_text"
             app:itemIconTint="@color/nav_item_icon"
             android:background="@color/nav_bg"
