--- a/app/src/main/res/layout/item_peliculas_gustadas.xml
+++ b/app/src/main/res/layout/item_peliculas_gustadas.xml
@@ -7,11 +7,24 @@
         android:id="@+id/imgpeliculagustada"
         android:layout_width="100dp"
         android:layout_height="100dp" />
-    <TextView
-        android:id="@+id/nombrepeliculagustada"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:orientation="vertical">
+    <TextView
+        android:layout_weight="1"
+        android:id="@+id/nombrepeliculagustada"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:text="NombrePeliculaGustada"
         android:gravity="left|center"/>
+        <TextView
+        android:layout_weight="1"
+        android:id="@+id/añopeliculagustada"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:text="AñoPeliculaGustada"
+        android:gravity="left|center"/>
+    </LinearLayout>
 
 </LinearLayout>
