--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#3F51B5</color>
-    <color name="primaryDark">#303F9F</color>
-    <color name="accent">#009688</color>
+    <color name="primary">#9E9E9E</color>
+    <color name="primaryDark">#616161</color>
+    <color name="accent">#607D8B</color>
 
     <color name="nav_bg">#333333</color>
     <color name="nav_item_text">#efefef</color>
