--- a/app/src/main/res/layout/activity_buscar_pelicula.xml
+++ b/app/src/main/res/layout/activity_buscar_pelicula.xml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B6B6B6"
+    android:orientation="vertical"
+    android:background="@drawable/xmen"
     tools:context="com.example.francisco.recomendador.BuscarPeliculaActivity">
 
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
+        >
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
 
     <EditText
+        android:textColor="#fff"
         android:id="@+id/buscarpelicula"
         android:layout_margin="15dp"
         android:layout_width="200dp"
@@ -21,7 +38,7 @@
     <Button
         android:id="@+id/btnbuscarpelicula"
         android:layout_margin="15dp"
-        android:layout_width="100dp"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:text="Buscar"
         android:background="#0288D1"
@@ -34,11 +51,10 @@
         android:scrollbars="vertical"
         android:layout_below="@id/btnbuscarpelicula"/>
 
+    </RelativeLayout>
 
-    <android.support.v4.widget.DrawerLayout
-        android:id="@+id/drawer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
+    </FrameLayout>
 
         <android.support.design.widget.NavigationView
             app:theme="@style/NavViewTheme"
@@ -53,4 +69,4 @@
             />
     </android.support.v4.widget.DrawerLayout>
 
-</RelativeLayout>
+</LinearLayout>
