--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/deadpool"
 
     tools:context=".MainActivity">
 
@@ -19,17 +20,13 @@
             android:layout_height="match_parent"
             >
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/refresh"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <EditText
+                    android:textColor="#fff"
                     android:id="@+id/EditUsrMain"
                     android:layout_width="200dp"
                     android:layout_height="50dp"
@@ -53,7 +50,6 @@
             </RelativeLayout>
 
 
-        </android.support.v4.widget.SwipeRefreshLayout>
         </FrameLayout>
       <android.support.design.widget.NavigationView
             app:theme="@style/NavViewTheme"
