--- a/app/src/main/res/layout/activity_nuestra_recomendacion.xml
+++ b/app/src/main/res/layout/activity_nuestra_recomendacion.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
-    android:background="@drawable/ironman"
-    android:orientation="vertical"
-    tools:context=".UsuariosSimilaresActivity"
-    >
+    android:background="@drawable/game"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.example.francisco.recomendador.NuestraRecomendacion">
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer"
@@ -14,7 +12,8 @@
         android:layout_height="match_parent"
 
         >
-       <FrameLayout
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
@@ -25,22 +24,23 @@
 
                     <EditText
                         android:textColor="#fff"
-                        android:id="@+id/EditUsrSimilar"
+                        android:id="@+id/EditUsrNuestro"
                         android:layout_width="200dp"
                         android:layout_height="50dp"
-                        android:hint="Id Usuario"
-                        android:inputType="number"/>
+                        android:inputType="number"
+                        android:hint="Id Usuario"/>
                     <Button
-                        android:id="@+id/btnUsrSimilar"
-                        android:layout_toRightOf="@+id/EditUsrSimilar"
+                        android:id="@+id/btnUsrNuestro"
+                        android:layout_toRightOf="@+id/EditUsrNuestro"
                         android:layout_width="150dp"
-                        android:background="#0288D1"
                         android:layout_height="50dp"
-                        android:text="Buscar"/>
+                        android:background="#0288D1"
+                        android:text="Buscar"
+                        android:textColor="#ffffff"/>
 
                     <ListView
-                        android:layout_below="@+id/EditUsrSimilar"
-                        android:id="@+id/listaUsuariosSimilares"
+                        android:layout_below="@+id/btnUsrNuestro"
+                        android:id="@+id/listaNuestro"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"></ListView>
 
@@ -49,16 +49,18 @@
         </FrameLayout>
         <android.support.design.widget.NavigationView
             app:theme="@style/NavViewTheme"
-            android:id="@+id/navUsuariosSimilares"
+            android:id="@+id/nav_nuestro"
             android:layout_height="match_parent"
             android:layout_width="wrap_content"
             android:layout_gravity="start"
-            app:menu="@menu/menu_nav_similares"
+            app:menu="@menu/menu_nav_nuestrarecomendacion"
             app:itemTextColor="@color/nav_item_text"
             app:itemIconTint="@color/nav_item_icon"
             android:background="@color/nav_bg"
             />
 
     </android.support.v4.widget.DrawerLayout>
+
+
 
 </LinearLayout>
