--- a/app/src/main/res/layout/item_usuarios_similares.xml
+++ b/app/src/main/res/layout/item_usuarios_similares.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="20dp">
+    android:paddingBottom="20dp"
+    >
 
     <ImageView
         android:id="@+id/imgpeliculagustada"
