--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/deadpool"
+    android:background="#000"
 
     tools:context=".MainActivity">
 
@@ -37,7 +37,7 @@
                     android:layout_toRightOf="@+id/EditUsrMain"
                     android:layout_width="150dp"
                     android:layout_height="50dp"
-                    android:background="#0288D1"
+                    android:background="#F57C00"
                     android:text="Buscar"
                     android:textColor="#ffffff"/>
 
