--- a/app/src/main/res/layout/activity_usuarios_similares.xml
+++ b/app/src/main/res/layout/activity_usuarios_similares.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
-    android:background="@drawable/ironman"
+    android:background="#000"
     android:orientation="vertical"
     tools:context=".UsuariosSimilaresActivity"
     >
@@ -34,7 +34,7 @@
                         android:id="@+id/btnUsrSimilar"
                         android:layout_toRightOf="@+id/EditUsrSimilar"
                         android:layout_width="150dp"
-                        android:background="#0288D1"
+                        android:background="#F57C00"
                         android:layout_height="50dp"
                         android:text="Buscar"/>
 
