--- a/app/src/main/res/layout/item_nuestra_recomendacion.xml
+++ b/app/src/main/res/layout/item_nuestra_recomendacion.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:textColor="#fff"
         android:id="@+id/nombrePeliculaNuestra"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,6 +21,7 @@
         android:scaleType="centerCrop" />
 
     <TextView
+        android:textColor="#fff"
         android:id="@+id/tagsPeliculaNuestra"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
